crates/aimee_domain/src/transformer/snapshots/aimee_domain__transformer__transform_tool_calls__tests__transform_tool_calls_handles_empty_tool_outputs.snap
---
source: crates/aimee_domain/src/transformer/transform_tool_calls.rs
expression: snapshot
---
transformation: TransformToolCalls
before:
  messages:
    - tool:
        name: empty_tool
        call_id: call_empty
        output:
          is_error: false
          values:
            - empty
after: {}
